# cmark-hamlet

./: .travis.yml  Cargo.toml  README.md
src/: adapter.rs  lib.rs
tests/: specs.rs
